<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework 6</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="another_text_view">More Text</string>

    <string name="primitive_type">Primitive</string>
    <string name="serialized_object">Serialized</string>
    <string name="parcealable_object">Parcealable</string>
    <string name="email_address">Enter email address</string>
    <string name="user_name">Enter username</string>
    <string name="password">Enter password</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="no_make">Make cannot be empty</string>
    <string name="no_model">Model cannot be empty</string>
    <string name="no_year">Year cannot be empty</string>

    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="capitals">
        <item>Montgomery</item>
        <item>Juneau</item>
        <item>Phoenix</item>
        <item>Little Rock</item>
        <item>Sacramento</item>
        <item>Denver</item>
        <item>Hartford</item>
        <item>Dover</item>
        <item>Tallahassee</item>
        <item>Atlanta</item>
        <item>Honolulu</item>
        <item>Boise</item>
        <item>Springfield</item>
        <item>Indianapolis</item>
        <item>Des Moines</item>
        <item>Topeka</item>
        <item>Frankfort</item>
        <item>Baton Rouge</item>
        <item>Augusta</item>
        <item>Annapolis</item>
        <item>Boston</item>
        <item>Lansing</item>
        <item>Saint Paul</item>
        <item>Jackson</item>
        <item>Jefferson City</item>
        <item>Helena</item>
        <item>Lincoln</item>
        <item>Carson City</item>
        <item>Concord</item>
        <item>Trenton</item>
        <item>Santa Fe</item>
        <item>Albany</item>
        <item>Raleigh</item>
        <item>Bismarck</item>
        <item>Columbus</item>
        <item>Oklahoma City</item>
        <item>Salem</item>
        <item>Harrisburg</item>
        <item>Providence</item>
        <item>Columbia</item>
        <item>Pierre</item>
        <item>Nashville</item>
        <item>Austin</item>
        <item>Salt Lake City</item>
        <item>Montpelier</item>
        <item>Richmond</item>
        <item>Olympia</item>
        <item>Charleston</item>
        <item>Madison</item>
        <item>Cheyenne</item>
    </string-array>
    <string-array name="flowers">
        <item>Camellia japonica</item>
        <item>Myosotis alpestris</item>
        <item>Carnegiea gigantea</item>
        <item>Malus</item>
        <item>Eschscholzia californica</item>
        <item>Aquilegia caerulea</item>
        <item>Kalmia latifolia</item>
        <item>Prunus persica</item>
        <item>Citrus sinensis</item>
        <item>Rosa laevigata</item>
        <item>Hibiscus brackenridgei</item>
        <item>Philadelphus lewisii</item>
        <item>Viola</item>
        <item>Paeonia</item>
        <item>Rosa arkansana</item>
        <item>Helianthus annuus</item>
        <item>Solidago gigantea</item>
        <item>Magnolia</item>
        <item>Pinus strobus</item>
        <item>Rudbeckia hirta</item>
        <item>Epigaea repens</item>
        <item>Malus</item>
        <item>Cypripedium reginae</item>
        <item>Magnolia</item>
        <item>Crataegus</item>
        <item>Lewisia rediviva</item>
        <item>Solidago gigantea</item>
        <item>Artemisia tridentata</item>
        <item>Syringa vulgaris</item>
        <item>Viola sororia</item>
        <item>Yucca</item>
        <item>Rosa</item>
        <item>Cornus florida</item>
        <item>Rosa blanda</item>
        <item>Dianthus caryophyllus</item>
        <item>Rosa (Oklahoma Rose)</item>
        <item>Berberis aquifolium</item>
        <item>Kalmia latifolia</item>
        <item>Viola</item>
        <item>Gelsemium sempervirens</item>
        <item>Pulsatilla hirsutissima</item>
        <item>Iris</item>
        <item>Lupinus sp.</item>
        <item>Calochortus nuttallii</item>
        <item>Trifolium pratense</item>
        <item>Cornus florida</item>
        <item>Rhododendron macrophyllum</item>
        <item>Rhododendron maximum</item>
        <item>Viola papilionacea</item>
        <item>Castilleja linariifolia</item>
    </string-array>

    <string name="title_activity_my">MyActivity</string>
    <string name="increase_font">Font Size +</string>
    <string name="decrease_font">Font Size -</string>
    <string name="title_activity_flag">State Flag</string>
    <string name="state_name_placeholder">State Name</string>
    <string name="title_activity_flower_view">FlowerViewActivity</string>
    <string name="state_flag_description">State Flag</string>
    <string name="show_flower">State Flower</string>

</resources>
